--- a/backend/tsconfig.app.json
+++ b/backend/tsconfig.app.json
@@ -9,7 +9,7 @@
     "emitDecoratorMetadata": true,
     "target": "es2021"
   },
-  "include": ["src/**/*.ts"],
+  "include": ["src/**/*.ts", "src/app/users/users.service.ts"],
   "exclude": [
     "out-tsc",
     "dist",
