--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@swc/jest": "~0.2.38",
     "@testing-library/dom": "10.4.0",
     "@testing-library/react": "16.1.0",
+    "@types/express-session": "^1.18.2",
     "@types/jest": "^30.0.0",
     "@types/node": "20.19.9",
     "@types/react": "19.0.0",
@@ -76,11 +77,12 @@
     "bootstrap": "^5.3.8",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
+    "express-session": "^1.18.2",
     "mysql2": "^3.14.4",
     "react": "19.0.0",
     "react-bootstrap": "^2.10.10",
     "react-dom": "19.0.0",
-    "react-router-dom": "6.29.0",
+    "react-router-dom": "^6.29.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
     "swagger-ui-express": "^5.0.1",
