--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/express-session": "^1.18.2",
     "@types/jest": "^30.0.0",
     "@types/node": "20.19.9",
+    "@types/passport-jwt": "^4.0.1",
     "@types/react": "19.0.0",
     "@types/react-dom": "19.0.0",
     "@vitejs/plugin-react": "^4.2.0",
@@ -70,15 +71,21 @@
   "dependencies": {
     "@nestjs/common": "^11.0.0",
     "@nestjs/core": "^11.0.0",
+    "@nestjs/jwt": "^11.0.0",
+    "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.0",
     "@nestjs/swagger": "^11.2.0",
     "@nestjs/typeorm": "^11.0.0",
+    "@types/passport-local": "^1.0.38",
     "axios": "^1.6.0",
     "bootstrap": "^5.3.8",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "express-session": "^1.18.2",
     "mysql2": "^3.14.4",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
+    "passport-local": "^1.0.0",
     "react": "19.0.0",
     "react-bootstrap": "^2.10.10",
     "react-dom": "19.0.0",
