--- a/NextMarket-Trung/NextMarket-Trung/backend/package.json
+++ b/NextMarket-Trung/NextMarket-Trung/backend/package.json
@@ -84,13 +84,18 @@
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
+    "@types/passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.1.14",
     "ts-node": "^10.9.1",
     "typescript": "^5.8.3"
   },
   "dependencies": {
+    "@nestjs/jwt": "^11.0.0",
+    "@nestjs/passport": "^11.0.5",
     "bcryptjs": "^3.0.2",
     "mysql2": "^3.14.4",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
     "typeorm": "^0.3.26"
   }
 }
